plugins {
    id 'fabric-loom' version '1.5-SNAPSHOT'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    flatDir {
        dirs 'libs'
    }
    maven { url "https://bmclapi2.bangbang93.com/maven" }
    maven { url "https://maven.aliyun.com/repository/public" }
    maven { url "https://maven.fabricmc.net/" }
    maven { url "https://masa.dy.fi/maven/" }
    mavenCentral()
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    modImplementation name: 'litematica-fabric-1.20.1-0.15.4'
    modImplementation name: 'malilib-fabric-1.20.1-0.16.0'
    modCompileOnly name: 'modmenu-7.0.1'
    modLocalRuntime name: 'modmenu-7.0.1'
}

tasks.withType(JavaCompile).configureEach {
    options.release = 17
}
